--- a/style/style.css
+++ b/style/style.css
@@ -12,3 +12,49 @@ ul {
 .pizzaPrice {
     color: rgb(26, 109, 9);
 }
+.container {
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+.total {
+    padding-top: 20px;
+}
+img {
+    height: 800px;
+}
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 75px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+    border-radius: 50%;
+}
+.fa:hover {
+    opacity: 0.7;
+}
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+}
+.fa-twitter {
+    background: #55ACEE;
+    color: white;
+}
+.fa-instagram {
+    background: #125688;
+    color: white;
+}
+footer {
+    background-color: #979A9A;
+    max-width: auto;
+    padding-top: 30px;
+    padding-bottom: 20px;
+}
+.btn {
+    padding: 13px 40px;
+}
+.dropdown-menu {
+    padding-left: 17px;
+}
