--- a/style/style.css
+++ b/style/style.css
@@ -60,7 +60,10 @@ footer {
 }
 header h1 {
     color: rgb(26, 109, 9);
+    font-weight: bold;
+    font-size: 80px;
 }
 header p {
     color: brown;
+    font-size: 20px;
 }
